[tool.poetry]
name = "funky_hao"
version = "0.1.0"
description = ""
authors = ["Manabu Niseki <manabu.niseki@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
pycrypto = "^2.6.1"
requests-html = "^0.10.0"
httpx = "^0.13.3"
aiometer = "^0.2.1"
loguru = "^0.5.1"
asyncclick = "^7.0.9"
androguard = {version = "^3.4.0-alpha.1", allow-prereleases = true}

[tool.poetry.dev-dependencies]
autoflake = "^1.3.1"
autopep8 = "^1.5.1"
black = "^19.10b0"
coveralls = "^2.0.0"
flake8 = "^3.7.9"
isort = "^4.3.21"
mypy = "^0.770"
pre-commit = "^2.2.0"
pytest = "^5.4.1"
seed-isort-config = "^2.2.0"

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
known_third_party = ["Crypto", "aiometer", "androguard", "asyncclick", "httpx", "loguru", "requests_html"]
line_length = 88
multi_line_output = 3
use_parentheses= true


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
